# llama-mcp-adapter

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
llama-mcp-adapter/: adapter.py
llama_mcp_adapter/: adapter.py
