[project]
name = "llama-mcp-adapter"
version = "1.0.0"
description = "Adapter for handling Pydantic models and custom types in llama mcp."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.12.49",
    "llama-index-tools-mcp>=0.2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
code-quality = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
    "ty>=0.0.1a17",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "I",     # isort
    "F",     # pyflakes
    "FAST",  # FastApi
    "ANN",   # flake8-annotations
    "ASYNC", # flake8-async
    "COM",   # flake8-commas
    "T10",   # flake8-debugger
    "PT",    # flake8-pytest-style
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "N",     # pep8-naming
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
]
ignore = [
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN204", # missing-return-type-special-method
    "ANN401", # any-type
]
